--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>1.6.11</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>6.0</version>
@@ -61,6 +67,13 @@
 	<artifactId>commons-dbcp</artifactId>
 	<version>1.4</version>
 </dependency>
+
+   
+    <dependency>
+        <groupId>org.aspectj</groupId>
+        <artifactId>aspectjweaver</artifactId>
+        <version>1.6.11</version>
+    </dependency>
  
     <!-- JSF dependencies -->
     <dependency>
