--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,62 +5,65 @@
 <web-app>
     
     <display-name>Proyecto Curso</display-name>
- 
     
-      <context-param>
-    <param-name>javax.faces.CONFIG_FILES</param-name>
-    <param-value>/WEB-INF/faces-config.xml</param-value>
-  </context-param>
+    <context-param>   
+        <param-name>log4jConfiguration</param-name>
+        <param-value>classpath:log4j.xml</param-value>
+    </context-param>
+    
+    <context-param>
+        <param-name>javax.faces.CONFIG_FILES</param-name>
+        <param-value>/WEB-INF/faces-config.xml</param-value>
+    </context-param>
   
     <!-- Spring Context Configuration' s Path definition -->
-      <context-param>
+    <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>/WEB-INF/spring-context.xml</param-value>
     </context-param>
  
-      <!-- The Bootstrap listener to start up and shut down Spring's root WebApplicationContext. It is registered to Servlet Container -->
-      <listener>
-        <listener-class>
-            org.springframework.web.context.ContextLoaderListener
-        </listener-class>
-      </listener>
-      <listener>
-        <listener-class>
-            org.springframework.web.context.request.RequestContextListener
-        </listener-class>
-      </listener>
+    <!-- The Bootstrap listener to start up and shut down Spring's root WebApplicationContext. It is registered to Servlet Container -->
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>    
+    <listener>
+        <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
+    </listener>
+    <listener>
+        <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+    </listener>
  
-      <!-- Project Stage Level -->
-      <context-param>
+    <!-- Project Stage Level -->
+    <context-param>
         <param-name>javax.faces.PROJECT_STAGE</param-name>
         <param-value>Development</param-value>
-      </context-param>
+    </context-param>
  
-      <!-- Welcome Page -->
-      <welcome-file-list>
+    <!-- Welcome Page -->
+    <welcome-file-list>
         <welcome-file>/index.jsf</welcome-file>
-      </welcome-file-list>
+    </welcome-file-list>
  
-      <!-- JSF Servlet is defined to container -->
-      <servlet>
+    <!-- JSF Servlet is defined to container -->
+    <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
-      </servlet>
+    </servlet>
       
     <context-param>  
         <param-name>primefaces.THEME</param-name>  
         <param-value>bluesky</param-value>  
     </context-param> 
  
-      <!-- Mapping with servlet and url for the http requests. -->
-   <servlet-mapping>
+    <!-- Mapping with servlet and url for the http requests. -->
+    <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.faces</url-pattern>
-      </servlet-mapping>
-      <servlet-mapping>
+    </servlet-mapping>
+    <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.jsf</url-pattern>
-      </servlet-mapping>
+    </servlet-mapping>
   
 </web-app>
