--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -3,5 +3,5 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/bd_curso
 jdbc.username=root
-jdbc.password=mysql
+jdbc.password=adminadmin
 
