--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,7 +1,7 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://190.81.162.41:3306/test
+jdbc.url=jdbc:mysql://localhost:3306/bd_curso
 jdbc.username=root
-jdbc.password=locaid
+jdbc.password=mysql
 
