--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,13 @@
             <version>1.2.17</version>
         </dependency>
         
+        <!-- Jstl -->
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+        
          <!-- Spring Security -->
         <dependency>
             <groupId>org.springframework.security</groupId>
