CAMBIOS PARA PERMISOS EN METODOS

--- a/src/main/resources/etiquetas.properties
+++ b/src/main/resources/etiquetas.properties
@@ -24,4 +24,10 @@ cl_cursos_titulo_registro Registro de Cursos
 cl_cursos_nombre Nombre
 cl_cursos_descripcion Descripcion
 cl_cursos_tipoCurso Tipo Curso
+cl_cursos_modPago Modalidad de Pago
+cl_cursos_duracion Duracion
+cl_cursos_prerequisitos Pre requisitos
+cl_cursos_creditos Creditos
+
+cl_mensaje_autorizacion Usted no tiene permisos para ejecutar dicha acci\u00f3n
 
