--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -101,5 +101,11 @@
         <url-pattern>*.jsf</url-pattern>
     </servlet-mapping>
     
+    
+    <error-page>
+        <error-code>403</error-code>
+        <location>/accesoDenegado.xhtml</location>
+    </error-page>
+    
   
 </web-app>
