CAMBIOS PARA PERMISOS EN METODOS

--- a/src/main/resources/etiquetas.properties
+++ b/src/main/resources/etiquetas.properties
@@ -29,5 +29,6 @@ cl_cursos_duracion Duracion
 cl_cursos_prerequisitos Pre requisitos
 cl_cursos_creditos Creditos
 
-cl_mensaje_autorizacion Usted no tiene permisos para ejecutar dicha acci\u00f3n
+cl_mensaje_denegado Usted no tiene permisos para ejecutar dicha acci\u00f3n
+cl_mensaje_autorizacion Usted no tiene permisos para acceder a dicha URL
 
