--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -101,11 +101,16 @@
         <url-pattern>*.jsf</url-pattern>
     </servlet-mapping>
     
+    <!--
+    
     
     <error-page>
         <error-code>403</error-code>
-        <location>/accesoDenegado.xhtml</location>
+        <location>/accesoNoAutorizado.jsf</location>
     </error-page>
     
+  -->
+  
+  
   
 </web-app>
