--- a/src/main/resources/etiquetas.properties
+++ b/src/main/resources/etiquetas.properties
@@ -1,4 +1,9 @@
-#==========================ETIQUETAS==================================
+#==========================ETIQUETAS=================================
+
+cl_login_cabecera INGRESO DE USUARIOS
+cl_login_usuario Usuario
+cl_login_password Clave
+cl_login_aceptar Aceptar
 
 cl_titulo Modulo Cursos
 
@@ -15,6 +20,7 @@ cl_button_eliminar Eliminar
 cl_button_quitar Quitar
 cl_button_cancelar Cancelar
 cl_button_cerrar Cerrar
+cl_button_grabar Grabar
 
 cl_cursos_listado Listado
 cl_cursos_registro Registro
@@ -31,4 +37,16 @@ cl_cursos_creditos Creditos
 
 cl_mensaje_denegado Usted no tiene permisos para ejecutar dicha acci\u00f3n
 cl_mensaje_autorizacion Usted no tiene permisos para acceder a dicha URL
+
+cl_submenu_curso Cursos
+
+cl_menuitem_curso_nuevo Nuevo
+cl_menuitem_curso_listado Listado
+
+cl_bienvenido Bienvenido al Sistema 
+
+cl_integrantes Integrantes
+
+cl_seleccion_defecto --Seleccione--
+ 
 
