MENSAJES DE VALIDACION EN ESPAÑOL E INGLES

--- a/src/main/resources/etiquetas.properties
+++ b/src/main/resources/etiquetas.properties
@@ -48,5 +48,16 @@ cl_bienvenido Bienvenido al Sistema
 cl_integrantes Integrantes
 
 cl_seleccion_defecto --Seleccione--
- 
 
+cl_mensaje_nombre_curso Ingrese nombre de curso
+cl_mensaje_descripcion_curso Ingrese descripci\u00f3n de curso
+cl_mensaje_tipo_curso Seleccione Tipo Curso
+cl_mensaje_modalidad_curso Seleccione modalidad de pago
+cl_mensaje_duracion_curso Ingrese duraci\u00f3n
+cl_mensaje_prerequisitos_curso Ingrese pre requisitos
+cl_mensaje_creditos_curso Ingrese n\u00famero de cr\u00e9ditos
+
+cl_cabecera_tabla_codigo Codigo
+cl_cabecera_tabla_descripcion Descripcion
+
+cl_salir Salir
