--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -26,7 +26,7 @@
     
     <context-param>  
         <param-name>primefaces.THEME</param-name>  
-        <param-value>bluesky</param-value>  
+        <param-value>sunny</param-value>  
     </context-param> 
     
     
